--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
-        <div class="grid-item">7</div>
-        <div class="grid-item">8</div>
-        <div class="grid-item">9</div>
+        <div class="item_1">_</div>
+        <div class="item_2">_</div>
+        <div class="item_3">_</div>
+        <div class="item_4">_</div>
+        <div class="item_5">_</div>
+        <div class="item_6">_</div>
+        <div class="item_7">_</div>
+        <div class="item_8">_</div>
+        <div class="item_9">_</div>
+        <div class="item_10">_</div>
+        <div class="item_11">_</div>
       </div>
 </body>
 </html>
